<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/shapeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/wave" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:elevation="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/shapeLayout"
        app:layout_constraintTop_toBottomOf="@id/shapeLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="DuplicateIds">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toTopOf="@+id/sourceLangSelector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sourceText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/source_text_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
            android:id="@+id/sourceLangSelector"
            style="@style/SpinnerStyle"
            app:layout_constraintBottom_toTopOf="@id/buttonSyncSource"
            app:layout_constraintEnd_toStartOf="@id/buttonSwitchLang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSwitchLang"
                style="@style/IconOnlyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text=""
                app:icon="@drawable/ic_compare_arrows_black_24dp"
                app:layout_constraintEnd_toStartOf="@+id/targetLangSelector"
                app:layout_constraintStart_toEndOf="@+id/sourceLangSelector"
                app:layout_constraintTop_toTopOf="@id/sourceLangSelector"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/targetLangSelector"
                style="@style/SpinnerStyle"
                app:layout_constraintBottom_toBottomOf="@id/sourceLangSelector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
                app:layout_constraintTop_toTopOf="@id/sourceLangSelector" />

                <ToggleButton
                    android:id="@+id/buttonSyncSource"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:textOff="@string/download_model"
                    android:textOn="@string/delete_model"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toTopOf="@id/downloadedModels"
                    app:layout_constraintEnd_toEndOf="@+id/sourceLangSelector"
                    app:layout_constraintStart_toStartOf="@id/sourceLangSelector"
                    app:layout_constraintTop_toBottomOf="@id/sourceLangSelector" />

                <ToggleButton
                    android:id="@+id/buttonSyncTarget"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textOff="@string/download_model"
                    android:textOn="@string/delete_model"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="@id/buttonSyncSource"
                    app:layout_constraintEnd_toEndOf="@id/targetLangSelector"
                    app:layout_constraintStart_toStartOf="@id/targetLangSelector"
                    app:layout_constraintTop_toTopOf="@id/buttonSyncSource" />



                <TextView
                    android:id="@+id/downloadedModels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/downloaded_models_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonSyncSource" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/targetText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_16sdp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:gravity="top"
        android:maxLines="10"
        android:visibility="invisible"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/cameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dotted_border"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_camera"
            android:layout_marginEnd="@dimen/_16sdp"
            android:contentDescription="@string/camera_icon" />

        <ImageButton
            android:id="@+id/micButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dotted_border"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_voice_recorder"
            android:contentDescription="@string/voice_recorder_icon" />

        <ImageButton
            android:id="@+id/convButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dotted_border"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:src="@drawable/ic_conversation"
            android:contentDescription="@string/voice_recorder_icon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>